# codon-sw

./: .clang_complete  .gitignore  CHANGELOG  CMakeLists.txt  COPYING  Doxyfile  Makefile  README.md
doc/: algorithm.md
src/: codon_align.cpp  codon_smithwaterman_gotoh.hpp  config.h.in  matrix.hpp  score.hpp  seqan_codons.cpp  seqan_codons.hpp
